--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,164 +3,164 @@
 
 @string{aps = {American Physical Society,}}
 
+@article{Cerf2023-gn,
+  title   = {Complex-valued Wigner entropy of a quantum state},
+  author  = {Cerf, Nicolas J. and Hertz, Anaelle and Van Herstraeten, Zacharie},
+  journal = {Quantum Stud. Math. Found.},
+  month   = oct,
+  year    = 2023,
+  eprint  = {2310.19296},
+  doi     = {10.1007/s40509-024-00325-8},
+  issn    = {2196-5609,2196-5617},
+  pdf     = {https://rdcu.be/dIblJ}
+}
+
+
 @article{PhysRev.47.777,
-  abbr={PhysRev},
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.},
-  location={New Jersey},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777},
-  html={https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
-  pdf={example_pdf.pdf},
-  altmetric={248277},
-  dimensions={true},
-  google_scholar_id={qyhmnyLat1gC},
-  video={https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
-  additional_info={. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
-  annotation={* Example use of superscripts<br>† Albert Einstein},
-  selected={true},
-  inspirehep_id = {3255},
-  preview={brownian-motion.gif}
+  abbr              = {PhysRev},
+  title             = {Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
+  author            = {Einstein*†, A. and Podolsky*, B. and Rosen*, N.},
+  abstract          = {In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
+  journal           = {Phys. Rev.},
+  location          = {New Jersey},
+  volume            = {47},
+  issue             = {10},
+  pages             = {777--780},
+  numpages          = {0},
+  year              = {1935},
+  month             = {May},
+  publisher         = aps,
+  doi               = {10.1103/PhysRev.47.777},
+  url               = {http://link.aps.org/doi/10.1103/PhysRev.47.777},
+  html              = {https://journals.aps.org/pr/abstract/10.1103/PhysRev.47.777},
+  pdf               = {example_pdf.pdf},
+  altmetric         = {248277},
+  dimensions        = {true},
+  google_scholar_id = {qyhmnyLat1gC},
+  video             = {https://www.youtube-nocookie.com/embed/aqz-KE-bpKQ},
+  additional_info   = {. *More Information* can be [found here](https://github.com/alshedivat/al-folio/)},
+  annotation        = {* Example use of superscripts<br>† Albert Einstein},
+  selected          = {true},
+  inspirehep_id     = {3255},
+  preview           = {brownian-motion.gif}
 }
 
-
-@ARTICLE{Van_Herstraeten2021-nj,
-  title     = "Quantum Wigner entropy",
-  author    = "Van Herstraeten, Zacharie and Cerf, Nicolas J.",
-  journal   = "Phys. Rev. A",
-  publisher = "American Physical Society",
-  volume    =  104,
-  number    =  4,
-  pages     =  042211,
-  month     =  oct,
-  year      =  2021,
-  doi       = "10.1103/PhysRevA.104.042211",
-  issn      = "1050-2947",
-  google_scholar_id= "SyKuBvQAAAAJ:qjMakFHDy7sC",
-  pdf=     "http://quic.ulb.ac.be/_media/publications/2021-pra-104-042211.pdf",
-  abstract= "We define the Wigner entropy of a quantum state as the differential Shannon entropy of the Wigner function of the state. This quantity is properly defined only for states that possess a positive Wigner function, which we name Wigner-positive states, but we argue that it is a proper measure of quantum uncertainty in phase space. It is invariant under symplectic transformations (displacements, rotations, and squeezing) and we conjecture that it is lower bounded by ln⁡𝜋+1 within the convex set of Wigner-positive states. It reaches this lower bound for Gaussian pure states, which are natural minimum-uncertainty states. This conjecture bears a resemblance with the Wehrl-Lieb conjecture, and we prove it over the subset of passive states of the harmonic oscillator which are of particular relevance in quantum thermodynamics. Along the way, we present a simple technique to build a broad class of Wigner-positive states exploiting an optical beam splitter and reveal an unexpectedly simple convex decomposition of extremal passive states. The Wigner entropy is anticipated to be a significant physical quantity, for example, in quantum optics where it allows us to establish a Wigner entropy-power inequality. It also opens a way towards stronger entropic uncertainty relations. Finally, we define the Wigner-Rényi entropy of Wigner-positive states and conjecture an extended lower bound that is reached for Gaussian pure states."
+@article{Pizzimenti2024-rb,
+  title     = {Exploring the possibility of a complex-valued non-Gaussianity
+               measure for quantum states of light},
+  author    = {Pizzimenti, Andrew J. and Dhara, Prajit and Van Herstraeten,
+               Zacharie and Cheng, Sijie and Gagatsos, Christos N.},
+  journal   = {APL Quantum},
+  publisher = {AIP Publishing},
+  volume    = 1,
+  number    = 3,
+  month     = sep,
+  year      = 2024,
+  doi       = {10.1063/5.0219011},
+  issn      = {2835-0103},
+  language  = {en},
+  pdf       = {https://pubs.aip.org/aip/apq/article-pdf/doi/10.1063/5.0219011/20129471/036117_1_5.0219011.pdf}
 }
 
-@ARTICLE{Van-Herstraeten2023-ww,
-  title     = "Continuous majorization in quantum phase space",
-  author    = "Van Herstraeten, Zacharie and Jabbour, Michael G. and Cerf, Nicolas J.",
-  journal   = "Quantum",
-  publisher = "quantum-journal.org",
-  volume    =  7,
-  pages     =  1021,
-  year      =  2023,
-  doi       = "10.22331/q-2023-05-24-1021",
-  pdf       = "https://quantum-journal.org/papers/q-2023-05-24-1021/pdf/"
-}
-
-@ARTICLE{Van-Herstraeten2024-fr,
-  title     = "Classical capacity of quantum non-Gaussian attenuator and
-               amplifier channels",
-  author    = "Van Herstraeten, Zacharie and Guha, Saikat and Cerf, Nicolas J.",
-  journal   = "Int. J. Quantum Inf.",
-  publisher = "World Scientific Pub Co Pte Ltd",
-  volume    =  22,
-  number    =  05,
-  month     =  aug,
-  year      =  2024,
-  doi       = "10.1142/s0219749924400033",
-  issn      = "0219-7499,1793-6918",
-  language  = "en",
-  pdf       = "http://quic.ulb.ac.be/_media/publications/2024-ijqi-22-2440003.pdf"
-}
-
-@ARTICLE{Van-Herstraeten2024-bo,
-  title     = "Majorization theoretical approach to entanglement enhancement via
-               local filtration",
-  author    = "Van Herstraeten, Zacharie and Cerf, Nicolas J. and Guha, Saikat
-               and Gagatsos, Christos N",
-  journal   = "Phys. Rev. A",
-  publisher = "American Physical Society (APS)",
-  volume    =  110,
-  number    =  4,
-  pages     =  042430,
-  month     =  oct,
-  year      =  2024,
-  doi       = "10.1103/physreva.110.042430",
-  issn      = "2469-9926,2469-9934",
-  language  = "en",
-  pdf       = "http://quic.ulb.ac.be/_media/publications/2024-pra-110-042430.pdf"
-}
-
-@ARTICLE{Pizzimenti2024-rb,
-  title     = "Exploring the possibility of a complex-valued non-Gaussianity
-               measure for quantum states of light",
-  author    = "Pizzimenti, Andrew J. and Dhara, Prajit and Van Herstraeten,
-               Zacharie and Cheng, Sijie and Gagatsos, Christos N.",
-  journal   = "APL Quantum",
-  publisher = "AIP Publishing",
-  volume    =  1,
-  number    =  3,
-  month     =  sep,
-  year      =  2024,
-  doi       = "10.1063/5.0219011",
-  issn      = "2835-0103",
-  language  = "en",
-  pdf       = "https://pubs.aip.org/aip/apq/article-pdf/doi/10.1063/5.0219011/20129471/036117_1_5.0219011.pdf"
-}
-
-@ARTICLE{Singh2019-jk,
-  title     = "Quantum thermodynamics in a multipartite setting: A resource
+@article{Singh2019-jk,
+  title     = {Quantum thermodynamics in a multipartite setting: A resource
                theory of local Gaussian work extraction for multimode bosonic
-               systems",
-  author    = "Singh, Uttam and Jabbour, Michael G. and Van Herstraeten,
-               Zacharie and Cerf, Nicolas J.",
-  journal   = "Phys. Rev. A",
-  publisher = "APS",
-  year      =  2019,
-  issn      = "1050-2947",
-  pdf = "http://quic.ulb.ac.be/_media/publications/2019_pra_100_042104.pdf"
+               systems},
+  author    = {Singh, Uttam and Jabbour, Michael G. and Van Herstraeten,
+               Zacharie and Cerf, Nicolas J.},
+  journal   = {Phys. Rev. A},
+  publisher = {APS},
+  year      = 2019,
+  issn      = {1050-2947},
+  pdf       = {http://quic.ulb.ac.be/_media/publications/2019_pra_100_042104.pdf}
 }
 
-@ARTICLE{Cerf2023-gn,
-  title   = "Complex-valued Wigner entropy of a quantum state",
-  author  = "Cerf, Nicolas J. and Hertz, Anaelle and Van Herstraeten, Zacharie",
-  journal = "Quantum Stud. Math. Found.",
-  month   =  oct,
-  year    =  2023,
-  eprint  = "2310.19296",
-  doi     = "10.1007/s40509-024-00325-8",
-  issn    = "2196-5609,2196-5617",
-  pdf = "https://rdcu.be/dIblJ"
+@article{Van_Herstraeten2021-nj,
+  title             = {Quantum Wigner entropy},
+  author            = {Van Herstraeten, Zacharie and Cerf, Nicolas J.},
+  journal           = {Phys. Rev. A},
+  publisher         = {American Physical Society},
+  volume            = 104,
+  number            = 4,
+  pages             = 042211,
+  month             = oct,
+  year              = 2021,
+  doi               = {10.1103/PhysRevA.104.042211},
+  issn              = {1050-2947},
+  google_scholar_id = {SyKuBvQAAAAJ:qjMakFHDy7sC},
+  pdf               = {http://quic.ulb.ac.be/_media/publications/2021-pra-104-042211.pdf},
+  abstract          = {We define the Wigner entropy of a quantum state as the differential Shannon entropy of the Wigner function of the state. This quantity is properly defined only for states that possess a positive Wigner function, which we name Wigner-positive states, but we argue that it is a proper measure of quantum uncertainty in phase space. It is invariant under symplectic transformations (displacements, rotations, and squeezing) and we conjecture that it is lower bounded by ln⁡𝜋+1 within the convex set of Wigner-positive states. It reaches this lower bound for Gaussian pure states, which are natural minimum-uncertainty states. This conjecture bears a resemblance with the Wehrl-Lieb conjecture, and we prove it over the subset of passive states of the harmonic oscillator which are of particular relevance in quantum thermodynamics. Along the way, we present a simple technique to build a broad class of Wigner-positive states exploiting an optical beam splitter and reveal an unexpectedly simple convex decomposition of extremal passive states. The Wigner entropy is anticipated to be a significant physical quantity, for example, in quantum optics where it allows us to establish a Wigner entropy-power inequality. It also opens a way towards stronger entropic uncertainty relations. Finally, we define the Wigner-Rényi entropy of Wigner-positive states and conjecture an extended lower bound that is reached for Gaussian pure states.}
+}
+
+@article{Van_Herstraeten2023-bw,
+  title     = {Majorization ladder in bosonic Gaussian channels},
+  author    = {Van Herstraeten, Zacharie and Jabbour, Michael G. and Cerf,
+               Nicolas J.},
+  journal   = {AVS Quantum Sci.},
+  publisher = {American Vacuum Society},
+  volume    = 5,
+  number    = 1,
+  pages     = 011401,
+  month     = mar,
+  year      = 2023,
+  doi       = {10.1116/5.0129704},
+  pdf       = {http://quic.ulb.ac.be/_media/publications/2023-avs-quantumscience-5-011401.pdf}
+}
+
+@phdthesis{Van-Herstraeten2021-by,
+  title    = {Majorization theoretical approach to quantum uncertainty},
+  author   = {Van Herstraeten, Zacharie},
+  editor   = {Cerf, Nicolas J},
+  address  = {Brussels},
+  year     = 2021,
+  school   = {Université libre de Bruxelles},
+  pdf      = {http://quic.ulb.ac.be/_media/publications/2021_phd_thesis_zacharie_van_herstraeten.pdf},
+  abstract = {This thesis is centered on a novel approach to quantum uncertainty based on applying the theory of continuous majorization to quantum phase-space distributions. Majorization theory is a powerful mathematical framework that is aimed at comparing distributions with respect to intrinsic disorder. It is particularly significant in the sense that establishing a majorization relation between two distributions amounts to proving that every (Shur-concave) measure of disorder will categorize one distribution as more ordered than the other. Although this is less known, the distributions here do not need to be normalized nor positive for majorization theory to apply, so the latter even extends beyond probability distributions. Further, a majorization relation can rigorously be defined for both discrete and continuous distributions over a finite-size domain, as well as for (discrete and continuous) distributions that are positive over an infinite-size domain.The central thrust of this thesis is to characterize quantum uncertainty in phase space by applying the tools of majorization theory to the Wigner function, which is the most common (quasi)distribution that embodies a quantum state in phase space. Wigner functions are in general positive and negative, putting them beyond the reach of most information-theoretical measures but perfect candidates for the theory of majorization. We start our manuscript with a succinct overview of the basics of quantum optics in phase space, which are a prerequisite for the characterization of disorder in phase space. This gives us the occasion to present a secondary achievement of the thesis consisting in establishing a resource theory for local Gaussian work extraction, which exploits the symplectic formalism within quantum thermodynamics. In this context, work can be defined as the difference between the trace and symplectic trace of the covariance matrix of the state, and it displays a number of interesting properties. Back to our primary interest, our first contribution is to construct an extended formulation of majorization with the applicability to Wigner functions as our main objective. It must be stressed that when relaxing the positivity condition, majorization relations have not been addressed in the literature for (discrete or continuous) distributions defined over an infinite-size domain. Here, we write extended majorization relations that equally apply to discrete or continuous, positive or negative distributions defined over a finite-size or infinite-size domain. Then, applying these to Wigner functions (which can be negative and have an infinite-size domain), our first finding is that all pure states are either incomparable or equivalent as regards majorization. Hence, any pure state cannot be objectively deemed more disordered than any other one in phase space, so that majorization appears to be better suited to compare mixed states.A large part of the thesis is then concerned with the convex set of quantum states that have a positive Wigner function, seeking a better understanding of its structure. As a consequence of Hudson theorem, this set only contains mixed states, with the notable exception of Gaussian pure states. We highlight a large subset of Wigner-positive states that can be prepared using a balanced beam-splitter and show that these states play a key role in the geometry of the Wigner-positive set as they are extremal states. Restricting ourselves to Wigner-positive states, we formulate the conjecture that the Gaussian pure states (most notably, the vacuum state) are the states of least disorder, which is expressed via a fundamental majorization relation. This conjecture is supported by numerical simulations and is analytically proven over the subset of phase-invariant states containing up to two photons. It can be viewed as a precursor to all uncertainty relations in phase space.Our next contribution pertains to the usage of information theory in quantum phase space. The conjectured fundamental majorization relation for Wigner-positive states implies in turn an infinite number of inequalities relating Schur-concave functionals, most notably the Rényi entropy and the Shannon differential entropy of the Wigner function. We define the latter as the Wigner entropy of a state, and conjecture that it is lower bounded by $lnpi+1$, namely the value it takes for Gaussian pure states. We then prove that this bound holds over the thermodynamically-relevant set of passive states in arbitrary dimension. The Wigner entropy is itself a lower bound on the sum of the entropies of the marginal distributions in phase space, which makes a clear connection with the entropic uncertainty relations of Białynicki-Birula and Mycielski (which are implied by our conjecture). Interestingly, the Wehrl-Lieb conjecture is also a consequence of our conjecture (while it does not imply it). Turning back to uncertainty measures that could also be applicable to Wigner-negative states, we also investigate which Schur-concave functionals can be considered as relevant uncertainty measures in phase space.A last contribution of the thesis concerns (discrete) majorization in state space, which is the usual way of applying majorization theory to quantum physics as described in the literature. Here, we focus on Gaussian phase-invariant bosonic channels and demonstrate the existence of a majorization ladder for Fock states at the input of the channel. This extends a prior analysis that was restricted to special (quantum-limited) channels. We also find a simple relation to determine whether such channels produce a Wigner-positive state for any input state, echoing the condition for entanglement-breaking channels. We hope that these considerations may help resolving some of the pending questions regarding entropies in bosonic systems and channels.}
+}
+
+@article{Van-Herstraeten2023-ww,
+  title     = {Continuous majorization in quantum phase space},
+  author    = {Van Herstraeten, Zacharie and Jabbour, Michael G. and Cerf, Nicolas J.},
+  journal   = {Quantum},
+  publisher = {quantum-journal.org},
+  volume    = 7,
+  pages     = 1021,
+  year      = 2023,
+  doi       = {10.22331/q-2023-05-24-1021},
+  pdf       = {https://quantum-journal.org/papers/q-2023-05-24-1021/pdf/}
 }
 
 
-@ARTICLE{Van_Herstraeten2023-bw,
-  title     = "Majorization ladder in bosonic Gaussian channels",
-  author    = "Van Herstraeten, Zacharie and Jabbour, Michael G. and Cerf,
-               Nicolas J.",
-  journal   = "AVS Quantum Sci.",
-  publisher = "American Vacuum Society",
-  volume    =  5,
-  number    =  1,
-  pages     =  011401,
-  month     =  mar,
-  year      =  2023,
-  doi       = "10.1116/5.0129704",
-  pdf = "http://quic.ulb.ac.be/_media/publications/2023-avs-quantumscience-5-011401.pdf"
+@article{Van-Herstraeten2024-bo,
+  title     = {Majorization theoretical approach to entanglement enhancement via
+               local filtration},
+  author    = {Van Herstraeten, Zacharie and Cerf, Nicolas J. and Guha, Saikat
+               and Gagatsos, Christos N},
+  journal   = {Phys. Rev. A},
+  publisher = {American Physical Society (APS)},
+  volume    = 110,
+  number    = 4,
+  pages     = 042430,
+  month     = oct,
+  year      = 2024,
+  doi       = {10.1103/physreva.110.042430},
+  issn      = {2469-9926,2469-9934},
+  language  = {en},
+  pdf       = {http://quic.ulb.ac.be/_media/publications/2024-pra-110-042430.pdf}
 }
 
-@PHDTHESIS{Van-Herstraeten2021-by,
-  title   = "Majorization theoretical approach to quantum uncertainty",
-  author  = "Van Herstraeten, Zacharie",
-  editor  = "Cerf, Nicolas J",
-  address = "Brussels",
-  year    =  2021,
-  school  = "Université libre de Bruxelles",
-  pdf = "http://quic.ulb.ac.be/_media/publications/2021_phd_thesis_zacharie_van_herstraeten.pdf",
-  abstract = "This thesis is centered on a novel approach to quantum uncertainty based on applying the theory of continuous majorization to quantum phase-space distributions. Majorization theory is a powerful mathematical framework that is aimed at comparing distributions with respect to intrinsic disorder. It is particularly significant in the sense that establishing a majorization relation between two distributions amounts to proving that every (Shur-concave) measure of disorder will categorize one distribution as more ordered than the other. Although this is less known, the distributions here do not need to be normalized nor positive for majorization theory to apply, so the latter even extends beyond probability distributions. Further, a majorization relation can rigorously be defined for both discrete and continuous distributions over a finite-size domain, as well as for (discrete and continuous) distributions that are positive over an infinite-size domain.The central thrust of this thesis is to characterize quantum uncertainty in phase space by applying the tools of majorization theory to the Wigner function, which is the most common (quasi)distribution that embodies a quantum state in phase space. Wigner functions are in general positive and negative, putting them beyond the reach of most information-theoretical measures but perfect candidates for the theory of majorization. We start our manuscript with a succinct overview of the basics of quantum optics in phase space, which are a prerequisite for the characterization of disorder in phase space. This gives us the occasion to present a secondary achievement of the thesis consisting in establishing a resource theory for local Gaussian work extraction, which exploits the symplectic formalism within quantum thermodynamics. In this context, work can be defined as the difference between the trace and symplectic trace of the covariance matrix of the state, and it displays a number of interesting properties. Back to our primary interest, our first contribution is to construct an extended formulation of majorization with the applicability to Wigner functions as our main objective. It must be stressed that when relaxing the positivity condition, majorization relations have not been addressed in the literature for (discrete or continuous) distributions defined over an infinite-size domain. Here, we write extended majorization relations that equally apply to discrete or continuous, positive or negative distributions defined over a finite-size or infinite-size domain. Then, applying these to Wigner functions (which can be negative and have an infinite-size domain), our first finding is that all pure states are either incomparable or equivalent as regards majorization. Hence, any pure state cannot be objectively deemed more disordered than any other one in phase space, so that majorization appears to be better suited to compare mixed states.A large part of the thesis is then concerned with the convex set of quantum states that have a positive Wigner function, seeking a better understanding of its structure. As a consequence of Hudson theorem, this set only contains mixed states, with the notable exception of Gaussian pure states. We highlight a large subset of Wigner-positive states that can be prepared using a balanced beam-splitter and show that these states play a key role in the geometry of the Wigner-positive set as they are extremal states. Restricting ourselves to Wigner-positive states, we formulate the conjecture that the Gaussian pure states (most notably, the vacuum state) are the states of least disorder, which is expressed via a fundamental majorization relation. This conjecture is supported by numerical simulations and is analytically proven over the subset of phase-invariant states containing up to two photons. It can be viewed as a precursor to all uncertainty relations in phase space.Our next contribution pertains to the usage of information theory in quantum phase space. The conjectured fundamental majorization relation for Wigner-positive states implies in turn an infinite number of inequalities relating Schur-concave functionals, most notably the Rényi entropy and the Shannon differential entropy of the Wigner function. We define the latter as the Wigner entropy of a state, and conjecture that it is lower bounded by $lnpi+1$, namely the value it takes for Gaussian pure states. We then prove that this bound holds over the thermodynamically-relevant set of passive states in arbitrary dimension. The Wigner entropy is itself a lower bound on the sum of the entropies of the marginal distributions in phase space, which makes a clear connection with the entropic uncertainty relations of Białynicki-Birula and Mycielski (which are implied by our conjecture). Interestingly, the Wehrl-Lieb conjecture is also a consequence of our conjecture (while it does not imply it). Turning back to uncertainty measures that could also be applicable to Wigner-negative states, we also investigate which Schur-concave functionals can be considered as relevant uncertainty measures in phase space.A last contribution of the thesis concerns (discrete) majorization in state space, which is the usual way of applying majorization theory to quantum physics as described in the literature. Here, we focus on Gaussian phase-invariant bosonic channels and demonstrate the existence of a majorization ladder for Fock states at the input of the channel. This extends a prior analysis that was restricted to special (quantum-limited) channels. We also find a simple relation to determine whether such channels produce a Wigner-positive state for any input state, echoing the condition for entanglement-breaking channels. We hope that these considerations may help resolving some of the pending questions regarding entropies in bosonic systems and channels."
+@article{Van-Herstraeten2024-fr,
+  title     = {Classical capacity of quantum non-Gaussian attenuator and
+               amplifier channels},
+  author    = {Van Herstraeten, Zacharie and Guha, Saikat and Cerf, Nicolas J.},
+  journal   = {Int. J. Quantum Inf.},
+  publisher = {World Scientific Pub Co Pte Ltd},
+  volume    = 22,
+  number    = 05,
+  month     = aug,
+  year      = 2024,
+  doi       = {10.1142/s0219749924400033},
+  issn      = {0219-7499,1793-6918},
+  language  = {en},
+  pdf       = {http://quic.ulb.ac.be/_media/publications/2024-ijqi-22-2440003.pdf}
 }
