--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -13,7 +13,8 @@
   doi               = {10.1007/s40509-024-00325-8},
   issn              = {2196-5609,2196-5617},
   pdf               = {https://rdcu.be/dIblJ},
-  google_scholar_id = {mB3voiENLucC}
+  google_scholar_id = {mB3voiENLucC},
+  abstract          = {It is common knowledge that the Wigner function of a quantum state may admit negative values, so that it cannot be viewed as a genuine probability density. Here, we examine the difficulty in finding an entropy-like functional in phase space that extends to negative Wigner functions and then advocate the merits of defining a complex-valued entropy associated with any Wigner function. This quantity, which we call the complex Wigner entropy, is defined via the analytic continuation of Shannon’s differential entropy of the Wigner function in the complex plane. We show that the complex Wigner entropy enjoys interesting properties, especially its real and imaginary parts are both invariant under Gaussian unitaries (displacements, rotations, and squeezing in phase space). Its real part is physically relevant when considering the evolution of the Wigner function under a Gaussian convolution, while its imaginary part is simply proportional to the negative volume of the Wigner function. Finally, we define the complex-valued Fisher information of any Wigner function, which is linked (via an extended de Bruijn’s identity) to the time derivative of the complex Wigner entropy when the state undergoes Gaussian additive noise. Overall, it is anticipated that the complex plane yields a proper framework for analyzing the entropic properties of quasiprobability distributions in phase space.}
 }
 
 @article{Pizzimenti2024-rb,
@@ -31,7 +32,8 @@
   issn              = {2835-0103},
   language          = {en},
   pdf               = {https://pubs.aip.org/aip/apq/article-pdf/doi/10.1063/5.0219011/20129471/036117_1_5.0219011.pdf},
-  google_scholar_id = {j3f4tGmQtD8C}
+  google_scholar_id = {j3f4tGmQtD8C},
+  abstract          = {We consider a quantity that is the differential relative entropy between a generic Wigner function and a Gaussian one. We prove that said quantity is minimized with respect to its Gaussian argument, if both Wigner functions in the argument of the Wigner differential entropy have the same first and second moments, i.e., if the Gaussian argument is the Gaussian associate of the other, generic Wigner function. Therefore, we introduce the differential relative entropy between any Wigner function and its Gaussian associate and we examine its potential as a non-Gaussianity measure. The proposed, phase-space based non-Gaussianity measure is complex-valued, with its imaginary part possessing the physical meaning of the Wigner function’s negative volume. At the same time, the real part of this measure provides an extra layer of information, rendering the complex-valued quantity a measure of non-Gaussianity, instead of a quantity pertaining only to the negativity of the Wigner function. We prove that the measure (both the real and imaginary parts) is faithful, invariant under Gaussian unitary operations, and find a sufficient condition on its monotonic behavior under Gaussian channels. We provide numerical results supporting the aforesaid condition. In addition, we examine the measure’s usefulness to non-Gaussian quantum state engineering with partial measurements.}
 }
 
 @article{Singh2019-jk,
@@ -45,7 +47,9 @@
   year              = 2019,
   issn              = {1050-2947},
   pdf               = {http://quic.ulb.ac.be/_media/publications/2019_pra_100_042104.pdf},
-  google_scholar_id = {u-x6o8ySG0sC}
+  google_scholar_id = {u-x6o8ySG0sC},
+  doi               = {10.1103/PhysRevA.100.042104},
+  abstract          = {Quantum thermodynamics can be cast as a resource theory by considering free access to a heat bath, thereby viewing the Gibbs state at a fixed temperature as a free state and hence any other state as a resource. Here, we consider a multipartite scenario where several parties attempt at extracting work locally, each having access to a local heat bath (possibly with a different temperature), assisted with an energy-preserving global unitary. As a specific model, we analyze a collection of harmonic oscillators or a multimode bosonic system. Focusing on the Gaussian paradigm, we construct a reasonable resource theory of local activity for a multimode bosonic system, where we identify as free any state that is obtained from a product of thermal states (possibly at different temperatures) acted upon by any linear-optics (passive Gaussian) transformation. The associated free operations are then all linear-optics transformations supplemented with tensoring and partial tracing. We show that the local Gaussian extractable work (if each party applies a Gaussian unitary, assisted with linear optics) is zero if and only if the covariance matrix of the system is that of a free state. Further, we develop a resource theory of local Gaussian extractable work, defined as the difference between the trace and symplectic trace of the covariance matrix of the system. We prove that it is a resource monotone that cannot increase under free operations. We also provide examples illustrating the distillation of local activity and local Gaussian extractable work.}
 }
 
 @article{Van_Herstraeten2021-nj,
@@ -78,7 +82,8 @@
   year              = 2023,
   doi               = {10.1116/5.0129704},
   pdf               = {http://quic.ulb.ac.be/_media/publications/2023-avs-quantumscience-5-011401.pdf},
-  google_scholar_id = {8k81kl-MbHgC}
+  google_scholar_id = {8k81kl-MbHgC},
+  abstract          = {We show the existence of a majorization ladder in bosonic Gaussian channels, that is, we prove that the channel output resulting from the nth energy eigenstate (Fock state) majorizes the channel output resulting from the (n+1)th energy eigenstate (Fock state). This reflects a remarkable link between the energy at the input of the channel and a disorder relation at its output as captured by majorization theory. This result was previously known in the special cases of a pure-loss channel and quantum-limited amplifier, and we achieve here its non-trivial generalization to any single-mode phase-covariant (or -contravariant) bosonic Gaussian channel. The key to our proof is the explicit construction of a column-stochastic matrix that relates the outputs of the channel for any two subsequent Fock states at its input. This is made possible by exploiting a recently found recurrence relation on multiphoton transition probabilities for Gaussian unitaries [Jabbour and Cerf, Phys. Rev. Res. 3, 043065 (2021)]. Possible generalizations and implications of these results are then discussed.}
 }
 
 @phdthesis{Van-Herstraeten2021-by,
@@ -103,7 +108,8 @@
   year              = 2023,
   doi               = {10.22331/q-2023-05-24-1021},
   pdf               = {https://quantum-journal.org/papers/q-2023-05-24-1021/pdf/},
-  google_scholar_id = {Y0pCki6q_DkC}
+  google_scholar_id = {Y0pCki6q_DkC},
+  abstract          = {We explore the role of majorization theory in quantum phase space. To this purpose, we restrict ourselves to quantum states with positive Wigner functions and show that the continuous version of majorization theory provides an elegant and very natural approach to exploring the information-theoretic properties of Wigner functions in phase space. After identifying all Gaussian pure states as equivalent in the precise sense of continuous majorization, which can be understood in light of Hudson's theorem, we conjecture a fundamental majorization relation: any positive Wigner function is majorized by the Wigner function of a Gaussian pure state (especially, the bosonic vacuum state or ground state of the harmonic oscillator). As a consequence, any Schur-concave function of the Wigner function is lower bounded by the value it takes for the vacuum state. This implies in turn that the Wigner entropy is lower bounded by its value for the vacuum state, while the converse is notably not true. Our main result is then to prove this fundamental majorization relation for a relevant subset of Wigner-positive quantum states which are mixtures of the three lowest eigenstates of the harmonic oscillator. Beyond that, the conjecture is also supported by numerical evidence. We conclude by discussing some implications of this conjecture in the context of entropic uncertainty relations in phase space.}
 }
 
 
@@ -123,7 +129,8 @@
   issn              = {2469-9926,2469-9934},
   language          = {en},
   pdf               = {http://quic.ulb.ac.be/_media/publications/2024-pra-110-042430.pdf},
-  google_scholar_id = {HDshCWvjkbEC}
+  google_scholar_id = {HDshCWvjkbEC},
+  abstract          = {From the perspective of majorization theory, we study how to enhance the entanglement of a two-mode squeezed vacuum (TMSV) state by using local filtration operations. We present several schemes achieving entanglement enhancement with photon addition and subtraction, and then consider filtration as a general probabilistic procedure consisting in acting with local (nonunitary) operators on each mode. From this, we identify a sufficient set of two conditions for these filtration operators to successfully enhance the entanglement of a TMSV state, namely, the operators must be Fock orthogonal (i.e., preserving the orthogonality of Fock states) and Fock amplifying (i.e., giving larger amplitudes to larger Fock states). Our results notably prove that ideal photon addition, subtraction, and any concatenation thereof always enhance the entanglement of a TMSV state in the sense of majorization theory. We further investigate the case of realistic photon addition (subtraction) and are able to upper bound the distance between a realistic photon-added (-subtracted) TMSV state and a nearby state that is provably more entangled than the TMSV, thus extending entanglement enhancement to practical schemes via the use of a notion of approximate majorization. Finally, we consider the state resulting from 𝑘-photon addition (on each of the two modes) on a TMSV state. We prove analytically that the state corresponding to 𝑘=1 majorizes any state corresponding to 2≤𝑘≤8 and we conjecture the validity of the statement for all 𝑘≥9.}
 }
 
 @article{Van-Herstraeten2024-fr,
@@ -140,5 +147,6 @@
   issn              = {0219-7499,1793-6918},
   language          = {en},
   pdf               = {http://quic.ulb.ac.be/_media/publications/2024-ijqi-22-2440003.pdf},
-  google_scholar_id = {R3hNpaxXUhUC}
+  google_scholar_id = {R3hNpaxXUhUC},
+  abstract          = {We consider a quantum bosonic channel that couples the input mode via a beam splitter or two-mode squeezer to an environmental mode that is prepared in an arbitrary state. We investigate the classical capacity of this channel, which we call a non-Gaussian attenuator or amplifier channel. If the environment state is thermal, we of course recover a Gaussian phase-covariant channel whose classical capacity is well known. Otherwise, we derive both a lower and an upper bound to the classical capacity of the channel, drawing inspiration from the classical treatment of the capacity of non-Gaussian additive-noise channels. We show that the lower bound to the capacity is always achievable and give examples where the non-Gaussianity of the channel can be exploited so that the communication rate beats the capacity of the Gaussian-equivalent channel (i.e. the channel where the environment state is replaced by a Gaussian state with the same covariance matrix). Finally, our upper bound leads us to formulate and investigate conjectures on the input state that minimizes the output entropy of non-Gaussian attenuator or amplifier channels. Solving these conjectures would be a main step toward accessing the capacity of a large class of non-Gaussian bosonic channels.}
 }
